# dbt_dental_clinic

./: .cursorignore  .dockerignore  .env.template  .gitattributes  .gitignore  .ps1_profile  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.airflow  ENVIRONMENT_HANDLING_REVIEW.md  ENVIRONMENT_HANDLING_REVIEW_PHASE4_PROPOSAL.md  ENVIRONMENT_HANDLING_REVIEW_PHASE5_PROPOSAL.md  ENVIRONMENT_SETUP.md  Microsoft.PowerShell_profile.ps1  Pipfile  QUICK_START.md  README.md  SECURITY.md  SECURITY_IMPROVEMENTS.md  TODO.md  analyze_opendental_schema_refactored.py  analyzer_refactor.patch  check_dependencies.ps1  dbt_dental_clinic.code-workspace  dbt_project.yml  deployment_credentials.json.template  docker-compose.yml  etl_functions.ps1  get_schema_hash.py  load_env.ps1  load_project.ps1  mariadb_postgre_pipe.md  mariadb_postgre_pipe.py  monitor_workflow.ps1  package-lock.yml  packages.yml  project_goals.md  pyproject.toml  requirements-airflow-native.txt  (+15 more)
consult_audio_pipe/: .env.template  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
consult_audio_pipe/consult_audio_pipe/: analysis.py  conversion.py  pipeline.py  transcription.py
consult_audio_pipe/dental_consultation_pipeline/: __init__.py  analysis.py  cleaning.py
consult_audio_pipe/scripts/: audio_transcriber.py  chatgpt5_demo.py  convert_markdown_to_html.py  convert_markdown_to_pdf.py  llm_analysis_integration.py  run_pipeline.py  transcript_cleaner.py
consult_audio_pipe/templates/: create_analysis_template.py  create_summary_template.py
consult_audio_pipe/tests/: test_analysis_comprehensive.py  test_chatgpt5_integration.py  test_claude_api.py  test_cleaning_comprehensive.py  test_conversion_comprehensive.py  test_integration_comprehensive.py  test_openai_api.py  test_package.py  test_pipeline_chatgpt5_integration.py  test_transcription_comprehensive.py
etl_pipeline/: .env.template  .env_clinic.template  .env_local.template  .env_production.template  .env_test.template  CODE_REVIEW.md  Pipfile  README.md  __init__.py  __main__.py  connection_factory.py  debug_source_connection.py  elt_pipeline.py  main.py  mysql_replicator.py  pipeline_test.yaml  pyproject.toml  pytest_debugging_notes.md  set_connection.ps1  set_connection.sh  set_env.ps1  setup.py  tables_test.yaml  test_analyze_opendental_schema.py  test_connection_handling.py  test_connection_verification.py  test_connections.py  test_enhanced_schema_discovery.py  test_primary_incremental_column.py  test_schema_discovery_integration.py  test_settings_environment_files.py  test_settings_phase4.py
etl_pipeline/cli/: __init__.py  __main__.py  commands.py  entry.py  etl_functions.ps1  main.py  setup_cli.py  test_cli.py  test_etl_cli.py  test_powershell_integration.ps1
etl_pipeline/config/: __init__.py  database.py  loader.py  logging.py  mcp_config.yml  pipeline.yaml  settings.py  tables.yaml
etl_pipeline/core/: __init__.py  connections.py  exceptions.py  logger.py  metrics.py  monitoring.py  schema_discovery.py
etl_pipeline/docs/: CODE_REVIEW.md  DATA_CONTRACTS.md  DATA_FLOW_DIAGRAM.md  ENVIRONMENT_SETUP_README.md  FIXTURE_USAGE_GUIDE.md  PIPELINE_ARCHITECTURE.md  PRODUCTION_READINESS_NEXT_STEPS.md  README_mysql_replicator_tests.md  TESTING_PLAN.md  TEST_STRATEGY_PROMPT.md  archtectural_refactor_guide.md  bug_fix_summary_incremental_loading.md  bug_report_incremental_loading_stale_state.md  config_refactor_checklist.md  configuration.md  configuration_system_refactor.md  conftest_py_refactor_guide.md  connection_architecture.md  connection_environment_separation.md  connection_migration_guide.md  database_connections.md  e2e_testing_plan.md  environment_setup.md  etl_naming_conventions.md  etl_pipeline_data_structures_reference.md  etl_pipeline_methods.md  etl_tracking_management_plan.md  exception_implementation_plan.md  logging_migration_guide.md  monitoring_hybrid_fix.md  mysql_performance_optimization_guide.md  mysql_replication_methods.md  nightly_pipeline_guide.md  production_integration_tests.md  pytest_debugging_notes.md  refact_etl_tracking_management_plan.md  refactor_copy_methods.md  refactor_copy_methods_naming.md  refactor_loader_performance_plan_v1.md  refactor_mysql_postgres_handoff_analysis.md  (+8 more)
etl_pipeline/etl_pipeline/: __init__.py  __main__.py  elt_pipeline.py  mysql_replicator.py
etl_pipeline/extractors/: base_extractor.py  incremental.py  mysql_extractor.py
etl_pipeline/loaders/: base_loader.py  config_loader.py  postgres_loader.py
etl_pipeline/mcp/: __init__.py  client.py  health_integration.py
etl_pipeline/monitoring/: __init__.py  alerts.py  health_checks.py  metrics.py
etl_pipeline/orchestration/: __init__.py  dependency_graph.py  pipeline_runner.py  scheduler.py
etl_pipeline/scripts/: README_tracking_records.md  analyze_connection_usage.py  analyze_opendental_schema.py  analyze_opendental_schema.py.backup  analyze_schema_discovery.py  audit_table_row_counts.py  check_procedurelog_drift.py  check_replica_drift.py  cleanup_old_tracking_tables.py  compare_databases.py  generate_database_report.py  generate_table_config.py  grant_etl_privileges.py  initialize_etl_tracking_tables.py  investigate_payment_drift.py  investigate_replica_phantoms.py  method_tracker.py  parse_etl_logs.py  purge_raw_payment_phantoms.py  purge_raw_phantoms.py  quick_connection_check.py  run_etl_test.ps1  run_integration_tests.py  run_loader_smoke.py  run_refactored_loader_smoke.py  script_env.py  setup_environments.py  setup_test_databases.py  test_env_test_connections.py  test_performance_optimizations.py  test_phase1.py  test_root_connections.py  test_schema_discovery.py  update_pipeline_config.py
etl_pipeline/synthetic_data_generator/: .env_demo.template  .gitignore  DATABASE_SAFETY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  config.example.py  generate.ps1  main.py  project_structure.md  requirements.txt  test_generators.py  test_imports.py
etl_pipeline/tests/: README.md  conftest.py  conftest_backup_20250704_140842.py  conftest_refactor.md  conftest_update.py  pytest.ini  test_cli.py  test_config.py  test_etl_setup.py  (+5 more)
(+1979 files in other folders)
