[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Intelligent ETL pipeline for dental clinics"
authors = [{name = "Ben Rains", email = "rains.bp@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.5.0",
    "sqlalchemy>=1.4.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "cryptography>=3.4.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
    "sqlparse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.scripts]
etl = "etl_pipeline.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_pipeline*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true