[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_pipeline"
version = "0.1.0"
description = "ETL Pipeline for Dental Clinic Data"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "sqlalchemy>=1.4.0",
    "pandas>=1.3.0",
    "pyyaml>=5.4.0",
    "psycopg2-binary>=2.9.0",
    "mysqlclient>=2.0.0",
    "pymysql>=1.0.0",
    "sqlparse>=0.4.0",
]

[project.scripts]
etl = "etl_pipeline.cli.main:cli"
etl-status = "etl_pipeline.cli.main:status"
etl-validate = "etl_pipeline.cli.main:validate"
etl-test-connections = "etl_pipeline.cli.main:test_connections"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["etl_pipeline", "etl_pipeline.cli", "etl_pipeline.core", "etl_pipeline.extractors", "etl_pipeline.loaders", "etl_pipeline.transformers"] 