[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdc-cli"
version = "0.1.0"
description = "Dental clinic monorepo dev CLI (Phase 4 orchestration)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mdc = "mdc_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdc_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
