[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdc-cli"
version = "0.9.2"
description = "Dental clinic monorepo dev CLI (Phase 4 orchestration)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    # compose_etl_env_dict imports etl_pipeline.config.settings_v2, which loads
    # config_reader (tables.yml) — PyYAML is required for those unit tests in CI.
    "pyyaml>=6.0",
]

[project.scripts]
mdc = "mdc_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdc_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
